# holding-pattern-trainer

./: Cargo.toml  README.md  vors_data.txt
Scripts/: holding_practice.lua  xplane_data.json
src/: calculations.rs  data.rs  main.rs  tile_manager.rs
src/ui/: dialogs.rs  map.rs  mod.rs  telemetry.rs
